k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soen357-web
  namespace: soen357
spec:
  selector:
    app: soen357
  ports:
    - port: 80
      targetPort: 8000
