k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soen357-web
  namespace: soen357
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: soen357.adam-ousmer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soen357-web
                port:
                  number: 80
